Fix workflow image name

--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -15,7 +15,7 @@ jobs:
         id: build_image
         uses: redhat-actions/buildah-build@v2
         with:
-          image: framadatectl.
+          image: framadatectl
           tags: latest ${{ github.sha }}
           containerfiles: |
             ./Containerfile
