--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - Containerfile
+      - Dockerfile
 
 jobs:
   publish:
@@ -25,7 +25,7 @@ jobs:
           image: framadatectl
           tags: latest ${{ github.sha }}
           containerfiles: |
-            ./Containerfile
+            ./Dockerfile
 
       - name: Push image
         uses: redhat-actions/push-to-registry@v2
