--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test image build
 on:
   pull_request:
     paths:
-      - Containerfile
+      - Dockerfile
 
 jobs:
   test:
@@ -19,4 +19,4 @@ jobs:
           image: framadatectl
           tags: ${{ github.sha }}
           containerfiles: |
-            ./Containerfile
+            ./Dockerfile
